# travel-social-content

./: .env.example  .gitignore  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  LICENSE  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements-api.txt
.github/workflows/: validate.yml
assets/: README.md
docs/: CHANGELOG.md  GITHUB_UPLOAD_GUIDE.md  REAL_API_TEST_REPORT.md  ROADMAP.md
examples/: api-curl.sh  check_apis.sh  cross-models-comparison.md  dali-output.md  dunhuang-output.md  leshan-output.md  sichuan-output.md  using-image-apis.md  xian-output.md  yibin-output.md
references/: banned-words.md  copywriting-formulas.md  destinations.md  image-models-optimization.md  image-prompts-cheatsheet.md  output-template.md  platforms.md  web-search-strategy.md
scripts/: install.sh  make-output.sh  search-destination.sh
scripts/api/: README.md  __init__.py  generator.py  image_adapter.py  llm_adapter.py  schemas.py  server.py
